--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,3 +1,9 @@
-<p>
-  post-list works!
-</p>
+<h2>Posts</h2>
+
+<ul class="list-group">
+  <app-post-list-item *ngFor="let post of arrayPosts"
+                      [postListItemTitle]="post.title"
+                      [postListItemContent]="post.content"
+                      [postListItemCreateAt]="post.create_at"
+                      [postListItemLoveIts]="post.loveIts"></app-post-list-item>
+</ul>
